# codemate-hub

./: .dockerignore  .env.ci  .env.example  .gitignore  AGENTFILE.md  BRANCHES.md  BRANCH_REVIEW.md  BRANCH_UPDATE_EXECUTION_SUMMARY.md  BRANCH_UPDATE_QUICK_REF.md  BRANCH_UPDATE_STRATEGY.md  CHANGELOG.md  CONFLICT_RESOLUTION_GUIDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  FEATURE-BRANCHES.md  NEXT-STEPS.md  QUICK_SUMMARY.txt  README.dev.md  README.md  RELEASE_CHECKLIST.md  REPOSITORY_STATE.md  SUMMARY.md  TASK-05-SUMMARY.md  TASK-08-SUMMARY.md  TOOLING.md  TROUBLESHOOTING.md  VALIDATION.md  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.ollama-large.yml  docker-compose.ollama-small.yml  docker-compose.yml  mkdocs.yml  personas.yaml  pyproject.toml  requirements.txt
.github/: DOCUMENTATION-INDEX.md  README.md  copilot-instructions.md
.github/actions/setup-python-toolchain/: action.yml
.github/workflows/: changelog-auto-update.yml  ci.yml
config/: gpu-resource-strategy.yaml
config/langflow/flows/: README.md  code-assistant.json  document-ingestion.json  multi-agent-orchestrator.json  rag-pipeline.json  web-search-rag.json
config/mcp/: README.md  servers.json
config/observability/: README.md
config/observability/loki/: loki-config.yml
config/observability/otel/: otel-collector-config.yml
config/observability/prometheus/: prometheus.yml
config/observability/promtail/: promtail-config.yml
config/observability/tempo/: tempo-config.yml
config/ollama/: README.md  models.json
config/open-webui/: README.md  presets.json
config/ssl/: Generate-SelfSignedCerts.ps1  generate-self-signed.sh  manage-dns-ssl.sh
config/ssl/certs/: .gitignore  README.md
devcontainer-ubuntu-wsl2/: README.md
devcontainer-ubuntu-wsl2/.devcontainer/: Dockerfile  README.md  devcontainer.env  devcontainer.json  docker-compose.yml
devcontainer-ubuntu-wsl2/.devcontainer/scripts/: postCreateCommand.sh
devcontainer-ubuntu-wsl2/src/: README.md
docker/: docker-compose.gpu-runners.yml
docs/: AGENT_PIPELINES.md  DOCUMENTATION_SETUP.md  ENABLE_RAPTOR_MINI.md  GPU_SETUP.md  IMPLEMENTATION_SUMMARY.md  MODEL_SELECTION.md  MODEL_VERSIONS.md  MULTIMODAL_CONFIG.md  OBSERVABILITY.md  ORCHESTRATION.md  README.md  SSL_DNS_SETUP.md  index.md
docs/api-reference/: agents.md  index.md  orchestrator.md  pipeline.md  task-manager.md
docs/architecture/: data-flow.md  overview.md  services.md  signal-system.md
docs/development/: contributing.md  debugging.md  setup.md  testing.md
docs/getting-started/: configuration.md  first-steps.md  installation.md  quick-start.md
docs/guides/: gpu-support.md  memory-persistence.md  model-management.md  troubleshooting.md
docs/langflow/: FLOW_PATTERNS.md  README.md
docs/langflow/examples/: README.md  code-review-with-context.json  documentation-generator.json  simple-code-generation.json
insights/domain-preseeds/: docker-devops.md  python-best-practices.md  rag-langchain.md
nginx/: nginx-http.conf  nginx-ssl.conf  nginx.conf
scripts/: Deploy-Cluster.ps1  Deploy-Universal.ps1  build.sh  changelog.sh  check-health.sh  check-raptor-mini.ps1  chngbrgr.py  deploy-observability.sh  deploy-universal.sh  deploy.sh  docs-build.sh  docs-generate.sh  enable-copilot-org.ps1  generate_changelog.py  model-prune.sh  model-pull.sh  ollama-cluster-up.sh  ollama-gpu-up.sh  open-devcontainer.ps1  preflight-check.sh  push-feature-branches.sh  run-tests.sh  teardown.sh  test-integration.sh  test-ollama-health.sh  test-workflow.py  update-subsidiary-branches.sh  uv-python-manage.sh
scripts/chngbrgr/: __init__.py  git.py  models.py  render.py  trackers.py
scripts/git-hooks/: pre-push-verify-signatures
services/: __init__.py
services/gpu-resource-manager/: README.md  go.mod  main.go
services/review_orchestrator/: __init__.py
services/review_orchestrator/security/: __init__.py  prompt_sanitizer.py
src/: agents.py  app.py  chain_orchestrator.py  constants.py  enclave_tool.py  memory_setup.py  observability.py  orchestration_examples.py  orchestrator.py  pipeline.py  signals.py  task_manager.py
src/services/: __init__.py  embedding_service.py  ingestion_service.py  rag_pipeline.py
src/tools/: __init__.py  code_executor.py  document_processor.py  git_ops.py  vector_search.py
tests/: test_enclave.py  test_enclave_tool.py  test_orchestrator.py  test_pipeline.py  test_prompt_sanitizer.py  test_signals.py
tests/fixtures/: README.md  __init__.py  embedding_success.json  ollama_http_error.json  ollama_malformed.json  ollama_success.json
tests/integration/: __init__.py  test_api_endpoints.py  test_docker_services.py  test_end_to_end.py
tools/: __init__.py  chngbrgr.py
tools/chngbrgr/: __init__.py  config.py  git.py  models.py  render.py  trackers.py
trackers/: OVERVIEW.md  PLAN.md  README.md  SPEC.md
trackers/notes/: task-03-application-planning.md
trackers/tasks/: 01-infrastructure.md  02-models-data.md  03-application.md  04-langflow.md  05-enclaves-zephyr.md  06-dev-ux.md  07-automation-scripts.md  08-docs-qa.md
zephyr/: README.md  __init__.py  demo_enclave.py  integration_example.py
zephyr/core/: __init__.py  enclave.py  limits.py
zephyr/examples/: __init__.py  code_analyzer.py  pipeline_step.py
zephyr/exec/: __init__.py  isolation.py  runner.py
(+7 files in other folders)
