[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codemate-hub"
version = "0.3.0"
description = "Dockerized Agentic Coding Assistant with Ollama, Langflow, and Code Server"
readme = "README.md"
requires-python = "==3.12.11"
license = {text = "MIT"}
authors = [
  {name = "Tyler Zervas", email = "tz-dev@vectorweight.com"}
]
maintainers = [
  {name = "Vector Weight Technologies", email = "tz-dev@vectorweight.com"}
]
keywords = ["llm", "agents", "docker", "ollama", "langchain", "coding-assistant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "crewai==0.51.1",
  "langgraph==0.2.5",
  "langchain==0.2.16",
  "langchain-community==0.3.27",
  "langchain-chroma==0.1.4",
  "ollama==0.3.3",
  "sentence-transformers==3.2.1",
  "pydantic==2.9.2",
  "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
