[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codemate-hub"
version = "0.4.0"
description = "Dockerized Agentic Coding Assistant with Ollama, Langflow, and Code Server"
readme = "README.md"
requires-python = "==3.12.11"
license = {text = "MIT"}
authors = [
  {name = "Tyler Zervas", email = "tz-dev@vectorweight.com"}
]
maintainers = [
  {name = "Vector Weight Technologies", email = "tz-dev@vectorweight.com"}
]
keywords = ["llm", "agents", "docker", "ollama", "langchain", "coding-assistant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "crewai~=1.7.0",
  "langgraph~=1.0.5",
  "langchain~=1.1.3",
  "langchain-community~=0.4.1",
  "langchain-chroma~=1.0.0",
  "langchain-ollama~=1.0.1",
  "ollama~=0.6.1",
  "sentence-transformers~=3.2.1",
  "pydantic~=2.11.10",
  "pyyaml~=6.0.2",
  "psutil~=6.1.0",
  "prometheus-client~=0.21.0",
  "opentelemetry-api~=1.34.0",
  "opentelemetry-sdk~=1.34.0",
  "opentelemetry-instrumentation~=0.53b0",
  "opentelemetry-exporter-otlp~=1.34.0",
  "opentelemetry-instrumentation-fastapi~=0.53b0",
  "opentelemetry-instrumentation-requests~=0.53b0",
  "fastapi~=0.115.6",
  "uvicorn~=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "requests>=2.31.0",
  "black>=23.0",
  "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: Integration tests requiring running services",
    "slow: Slow tests that may take minutes to complete",
]
addopts = "-v --tb=short"
